--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #API Route
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=https://carevia-next-js.vercel.app
 
 #Socket Url
 VITE_SOCKET_URL=http://localhost:3001
