--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 VITE_API_URL=https://carevia-next-js.vercel.app
 
 #Socket Url
-VITE_SOCKET_URL=http://localhost:3001
+VITE_SOCKET_URL=https://carevia-socket-production.up.railway.app
