adevanced filteration with a single state

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 #API Route
-VITE_API_URL=https://carevia-next-js.vercel.app
+# VITE_API_URL=https://carevia-next-js.vercel.app
+VITE_API_URL=http://localhost:3000
 
 #Socket Url
-VITE_SOCKET_URL=https://carevia-socket-production.up.railway.app
+# VITE_SOCKET_URL=https://carevia-socket-production.up.railway.app
+VITE_SOCKET_URL=http://localhost:3001
