--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.13.0",
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
